[metadata]
name = ws2902-mqtt
version = 0.0.1
author = Michael Auchter
author_email = a@phire.org
description = MQTT bridge for WS-2902
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/auchter/ws2902-mqtt
project_urls =
    Bug Tracker = https://github.com/auchter/ws2902-mqtt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    flask
    gevent
    paho-mqtt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ws2902-mqtt = ws2902_mqtt.main:main
